No camera error message shows up only if you move the mouse #38319

Closed
opened 2014-01-22 15:06:52 +01:00 by Maverick · 6 comments

System Information
Operating system and graphics card
win64 i7 gtx titan

Blender Version
Broken: 2.69.9 6cd132b

Short description of error
When there is no camera and you press F12 to render both the pop-up error message as well as the Info message show up only if you move the mouse.

Exact steps for others to reproduce the error
Default scene, delete the camera, press F12. The rendered image shows up but does not render.
Only if you move the mouse you get the error message

**System Information** Operating system and graphics card win64 i7 gtx titan **Blender Version** Broken: 2.69.9 6cd132b **Short description of error** When there is no camera and you press F12 to render both the pop-up error message as well as the Info message show up only if you move the mouse. **Exact steps for others to reproduce the error** Default scene, delete the camera, press F12. The rendered image shows up but does not render. Only if you move the mouse you get the error message
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie
Brecht Van Lommel self-assigned this 2014-01-22 17:14:29 +01:00

This issue was referenced by blender/blender-addons-contrib@7da44effe9

This issue was referenced by blender/blender-addons-contrib@7da44effe96b507c98abc27f10e3ea6094ccdbd9

This issue was referenced by 7da44effe9

This issue was referenced by 7da44effe96b507c98abc27f10e3ea6094ccdbd9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7da44effe9.

Closed by commit 7da44effe9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38319
No description provided.