Fix T38319: no camera error message for render not showing correctly.